WORK WORK WORK!

--- a/landingpage.html
+++ b/landingpage.html
@@ -7,52 +7,56 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
+    <header>
         <div class="container">
             <h1>Handgjorda Smycken</h1>
             <nav>
                 <ul>
-                    <li><a href="#about">Om oss</a></li>
-                    <li><a href="#products">Produkter</a></li>
-                    <li><a href="#contact">Kontakta oss</a></li>
+                    <li><a href="#necklaces">Halsband</a></li>
+                    <li><a href="#bracelets">Armband</a></li>
+                    <li><a href="#earrings">Örhängen</a></li>
                 </ul>
             </nav>
         </div>
-    </div>
+    </header>
 
-    <div class="hero">
+    <section id="necklaces" class="section">
         <div class="container">
-            <h2>Välkommen till vårt unika sortiment av handgjorda smycken</h2>
-            <p>Upptäck våra kollektioner och hitta det perfekta smycket för dig eller någon du älskar.</p>
-            <a href="#products" class="btn">Utforska våra produkter</a>
+            <h2>Halsband</h2>
+            <div class="product">
+                <img src="necklace.jpg" alt="Halsband">
+                <p>Beskrivning av halsbandet här...</p>
+            </div>
+            <!-- Du kan lägga till fler halsband här -->
         </div>
-    </div>
+    </section>
 
-    <div class="about">
+    <section id="bracelets" class="section">
         <div class="container">
-            <h2>Om Oss</h2>
-            <p>Här kan du lägga en kort beskrivning av din verksamhet och din passion för att skapa handgjorda smycken.</p>
+            <h2>Armband</h2>
+            <div class="product">
+                <img src="bracelet.jpg" alt="Armband">
+                <p>Beskrivning av armbandet här...</p>
+            </div>
+            <!-- Du kan lägga till fler armband här -->
         </div>
-    </div>
+    </section>
 
-    <div class="products">
+    <section id="earrings" class="section">
         <div class="container">
-            <h2>Utforska Våra Produkter</h2>
-            <!-- Här kan du lägga till dina produkter -->
+            <h2>Örhängen</h2>
+            <div class="product">
+                <img src="earrings.jpg" alt="Örhängen">
+                <p>Beskrivning av örhängena här...</p>
+            </div>
+            <!-- Du kan lägga till fler örhängen här -->
         </div>
-    </div>
+    </section>
 
-    <div class="contact">
-        <div class="container">
-            <h2>Kontakta Oss</h2>
-            <!-- Här kan du lägga till kontaktformulär eller kontaktinformation -->
-        </div>
-    </div>
-
-    <div class="footer">
+    <footer>
         <div class="container">
             <p>&copy; 2024 Handgjorda Smycken. Alla rättigheter förbehållna.</p>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
