--- a/landingpage.html
+++ b/landingpage.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <div class="container">
-            <h1>Handgjorda Smycken</h1>
+            <a href="./landingpage.html">Handgjorda Smycken</a>
             <nav>
                 <ul>
-                    <li><a href="#necklaces">Halsband</a></li>
-                    <li><a href="#bracelets">Armband</a></li>
-                    <li><a href="#earrings">Örhängen</a></li>
+                    <li><a href="./halsband.html">Halsband</a> | </li>
+                    <li><a href="./armband.html">Armband</a> | </li>
+                    <li><a href="./örhängen.html">Örhängen</a> |</li>
                 </ul>
             </nav>
         </div>
@@ -54,7 +54,7 @@
     </section>
 
     <footer>
-        <div class="container">
+        <div class="footer">
             <p>&copy; 2024 Handgjorda Smycken. Alla rättigheter förbehållna.</p>
         </div>
     </footer>
