--- a/landingpage.html
+++ b/landingpage.html
@@ -7,56 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Handgjorda Smycken</h1>
-            <nav>
-                <ul>
-                    <li><a href="#necklaces">Halsband</a></li>
-                    <li><a href="#bracelets">Armband</a></li>
-                    <li><a href="#earrings">Örhängen</a></li>
-                </ul>
-            </nav>
+    <div class="Bilder">
+        <div class="Halsband">
+            <img src = "https://media.viskan.com/v2/idunaprod/normal/20093754_front.jpg" Alt="" style="width:300px;height:300px;">
         </div>
-    </header>
 
-    <section id="necklaces" class="section">
-        <div class="container">
-            <h2>Halsband</h2>
-            <div class="product">
-                <img src="necklace.jpg" alt="Halsband">
-                <p>Beskrivning av halsbandet här...</p>
-            </div>
-            <!-- Du kan lägga till fler halsband här -->
+        <div class="Örhängen">
+            <img src = "https://www.dhresource.com/webp/m/0x0/f2/albu/g10/M00/2D/29/rBVaWV1LtiKAG7A2AACg3yKFwqo428.jpg" Alt="" style="width:300px;height:300px;">
         </div>
-    </section>
 
-    <section id="bracelets" class="section">
-        <div class="container">
-            <h2>Armband</h2>
-            <div class="product">
-                <img src="bracelet.jpg" alt="Armband">
-                <p>Beskrivning av armbandet här...</p>
-            </div>
-            <!-- Du kan lägga till fler armband här -->
+        <div class="Armband">
+            <img src = "https://www.smycka.se/pub_images/original/A1991-001-21.jpg" Alt="" style="width:300px;height:300px;">
         </div>
-    </section>
-
-    <section id="earrings" class="section">
-        <div class="container">
-            <h2>Örhängen</h2>
-            <div class="product">
-                <img src="earrings.jpg" alt="Örhängen">
-                <p>Beskrivning av örhängena här...</p>
-            </div>
-            <!-- Du kan lägga till fler örhängen här -->
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Handgjorda Smycken. Alla rättigheter förbehållna.</p>
-        </div>
-    </footer>
+    </div>
 </body>
 </html>
