--- a/halsband.html
+++ b/halsband.html
@@ -17,7 +17,10 @@
 
     <header>
         <div class="head">
-            <a href="./landingpage.html">HANDGJORDA SMYCKEN</a>
+
+            <div class="name">
+                <a href="./landingpage.html">HANDGJORDA SMYCKEN</a>
+            </div>
 
             <div class="headermenu">
                 <div class="halsband">
