inget valthorn sen, yippee

--- a/halsband.html
+++ b/halsband.html
@@ -43,37 +43,42 @@
 
 
         <div class="products">
-            <div class="product1">
-                <img src="https://alwaysbuddies.com/cdn/shop/products/happy-cat-meme-necklace-579561.jpg?v=1685602848&width=1946" alt="cat necklace">
-                <input type="button" value="Köp">
-            </div>
 
-            <div class="product2">
-                <img src="https://alwaysbuddies.com/cdn/shop/products/the-rock-meme-necklace-421975.jpg?v=1685602852&width=1946">
-                <input type="button" value="Köp">
-            </div>
+            <div class="row1">
+                <div class="product1">
+                    <img src="https://alwaysbuddies.com/cdn/shop/products/happy-cat-meme-necklace-579561.jpg?v=1685602848&width=1946" alt="cat necklace">
+                    <input type="button" value="Köp">
+                </div>
 
-            <div class="product3">
-                <img src="https://i.etsystatic.com/5134073/r/il/c333c5/2792106556/il_fullxfull.2792106556_to02.jpg">
-                <input type="button" value="Köp">
-            </div>
+                <div class="product2">
+                    <img src="https://alwaysbuddies.com/cdn/shop/products/the-rock-meme-necklace-421975.jpg?v=1685602852&width=1946">
+                    <input type="button" value="Köp">
+                </div>
 
-            <div class="product4">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSYvLrZVTLq-MflHkxveuhBHHtl-eshBnZ4A&usqp=CAU">
-                <input type="button" value="Köp">
-            </div>
+                <div class="product3">
+                    <img src="https://i.etsystatic.com/5134073/r/il/c333c5/2792106556/il_fullxfull.2792106556_to02.jpg">
+                    <input type="button" value="Köp">
+                </div>
 
-            <div class="product5">
-                <img src="https://canary.contestimg.wish.com/api/webimage/57e8e3f83022a614927d84be-large.jpg?cache_buster=f83686ad8086323c60e2828b67e1e4fb">
-                <input type="button" value="Köp">
-            </div>
+            </div>    
 
-            <div class="product6">
-                <img src="https://i.pinimg.com/736x/21/ab/45/21ab459460272f614207f46091a0ed98.jpg">
-                <input type="button" value="Köp">
+            <div class="row2">
+                <div class="product4">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSYvLrZVTLq-MflHkxveuhBHHtl-eshBnZ4A&usqp=CAU">
+                    <input type="button" value="Köp">
+                </div>
+
+                <div class="product5">
+                    <img src="https://canary.contestimg.wish.com/api/webimage/57e8e3f83022a614927d84be-large.jpg?cache_buster=f83686ad8086323c60e2828b67e1e4fb">
+                    <input type="button" value="Köp">
+                </div>
+
+                <div class="product6">
+                    <img src="https://i.pinimg.com/736x/21/ab/45/21ab459460272f614207f46091a0ed98.jpg">
+                    <input type="button" value="Köp">
+                </div>
             </div>
         </div>
-
     </div>
 </body>
 </html>
