--- a/landingpage.html
+++ b/landingpage.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Handgjorda Smycken</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="landingpage.css">
 </head>
 <body>
     <div class="Bilder">
         <div class="Halsband">
-            <img src = "https://media.viskan.com/v2/idunaprod/normal/20093754_front.jpg" Alt="" style="width:300px;height:300px;">
+            <img src = "https://media.viskan.com/v2/idunaprod/normal/20093754_front.jpg" Alt="" style="width:500px;height:400px;">
         </div>
 
         <div class="Örhängen">
-            <img src = "https://www.dhresource.com/webp/m/0x0/f2/albu/g10/M00/2D/29/rBVaWV1LtiKAG7A2AACg3yKFwqo428.jpg" Alt="" style="width:300px;height:300px;">
+            <img src = "https://www.dhresource.com/webp/m/0x0/f2/albu/g10/M00/2D/29/rBVaWV1LtiKAG7A2AACg3yKFwqo428.jpg" Alt="" style="width:500px;height:400px;">
         </div>
 
         <div class="Armband">
-            <img src = "https://www.smycka.se/pub_images/original/A1991-001-21.jpg" Alt="" style="width:300px;height:300px;">
+            <img src = "https://www.smycka.se/pub_images/original/A1991-001-21.jpg" Alt="" style="width:500px;height:400px;">
         </div>
     </div>
 </body>
