--- a/landingpage.html
+++ b/landingpage.html
@@ -5,8 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Handgjorda Smycken</title>
     <link rel="stylesheet" href="landingpage.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
+
+    <header>
+        <div class="head">
+
+            <div class="name">
+                <a href="./landingpage.html">HANDGJORDA SMYCKEN</a>
+            </div>
+
+            <div class="headermenu">
+                <div class="halsband">
+                    <a href="./halsband.html">HALSBAND</a>
+                </div>
+
+                <div class="armband">
+                    <a href="./armband.html">ARMBAND</a>
+
+                </div>
+
+                <div class="örhängen">
+                    <a href="./örhängen.html">ÖRHÄNGEN</a>
+    
+            </div>
+        </div>
+    </header>
+
+
+
+
+
     <div class="Bilder">
         <div class="Halsband">
             <img src = "https://media.viskan.com/v2/idunaprod/normal/20093754_front.jpg" Alt="" style="width:500px;height:400px;">
