--- a/halsband.html
+++ b/halsband.html
@@ -48,7 +48,7 @@
                 <div class="product1">
                     <div class="img1">
                         <img src="https://alwaysbuddies.com/cdn/shop/products/happy-cat-meme-necklace-579561.jpg?v=1685602848&width=1946" alt="cat necklace">
-                        <p>Happy Cat</p>
+                        <div class="txt1">Happy Cat</div>
                     </div>
                     <button type="button" onclick="alert('Wow, this is nice')">Köp</button>
                 </div>
@@ -56,7 +56,7 @@
                 <div class="product2">
                     <div class="img2">
                         <img src="https://alwaysbuddies.com/cdn/shop/products/the-rock-meme-necklace-421975.jpg?v=1685602852&width=1946">
-                        <p>The Rock</p>
+                        <div class="txt2">The Rock</div>
                     </div>
                     <button type="button" onclick="alert('Wow, this is nice')">Köp</button>
                 </div>
@@ -64,7 +64,7 @@
                 <div class="product3">
                     <div class="img3">
                         <img src="https://i.etsystatic.com/5134073/r/il/c333c5/2792106556/il_fullxfull.2792106556_to02.jpg">
-                        <p>Screaming Guy</p>
+                        <div class="txt3">Screaming Guy</div>
                     </div>
                     <button type="button" onclick="alert('Wow, this is nice')">Köp</button>
                 </div>
@@ -75,7 +75,7 @@
                 <div class="product4">
                     <div class="img4">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSYvLrZVTLq-MflHkxveuhBHHtl-eshBnZ4A&usqp=CAU">
-                        <p>Sourcream and Onion</p>
+                        <div class="txt4">Sourcream and Onion</div>
                     </div>
                     <button type="button" onclick="alert('Wow, this is nice')">Köp</button>
                 </div>
@@ -83,7 +83,7 @@
                 <div class="product5">
                     <div class="img5">
                         <img src="https://canary.contestimg.wish.com/api/webimage/57e8e3f83022a614927d84be-large.jpg?cache_buster=f83686ad8086323c60e2828b67e1e4fb">
-                        <p>Spooder-Man</p>
+                        <div class="txt5">Spooder-Man</div>
                     </div>
                     <button type="button" onclick="alert('Wow, this is nice')">Köp</button>
                 </div>
@@ -91,7 +91,7 @@
                 <div class="product6">
                     <div class="img6">
                         <img src="https://i.pinimg.com/736x/21/ab/45/21ab459460272f614207f46091a0ed98.jpg">
-                        <p>Big Ass Chain</p>
+                        <div class="txt6">Big Ass Chain</div>
                     </div>
                     <button type="button" onclick="alert('Wow, this is nice')">Köp</button>
                 </div>
