--- a/halsband.html
+++ b/halsband.html
@@ -50,7 +50,7 @@
                         <img src="https://alwaysbuddies.com/cdn/shop/products/happy-cat-meme-necklace-579561.jpg?v=1685602848&width=1946" alt="cat necklace">
                         <div class="txt1">Happy Cat</div>
                     </div>
-                    <button type="button" onclick="alert('Wow, this is nice')">Köp</button>
+                    <button type="button" onclick="alert('Wow, this is nice')">Köp  skriv priser på knapparna</button>
                 </div>
 
                 <div class="product2">
