--- a/landingpage.html
+++ b/landingpage.html
@@ -39,21 +39,26 @@
     </header>
 
 
+    <div class="main">
+        <div class="bg">
+        
+        </div>    
 
 
+        <div class="Bilder">
+            <div class="Halsband">
+                <img src = "https://media.viskan.com/v2/idunaprod/normal/20093754_front.jpg" Alt="" style="width:500px;height:550px;">
+            </div>
 
-    <div class="Bilder">
-        <div class="Halsband">
-            <img src = "https://media.viskan.com/v2/idunaprod/normal/20093754_front.jpg" Alt="" style="width:500px;height:400px;">
+            <div class="Örhängen">
+                <img src = "https://www.dhresource.com/webp/m/0x0/f2/albu/g10/M00/2D/29/rBVaWV1LtiKAG7A2AACg3yKFwqo428.jpg" Alt="" style="width:500px;height:550px;">
+            </div>
+
+            <div class="Armband">
+                <img src = "https://www.smycka.se/pub_images/original/A1991-001-21.jpg" Alt="" style="width:500px;height:550px;">
+            </div>
         </div>
 
-        <div class="Örhängen">
-            <img src = "https://www.dhresource.com/webp/m/0x0/f2/albu/g10/M00/2D/29/rBVaWV1LtiKAG7A2AACg3yKFwqo428.jpg" Alt="" style="width:500px;height:400px;">
-        </div>
-
-        <div class="Armband">
-            <img src = "https://www.smycka.se/pub_images/original/A1991-001-21.jpg" Alt="" style="width:500px;height:400px;">
-        </div>
     </div>
 </body>
 </html>
