--- a/landingpage.html
+++ b/landingpage.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Edu+NSW+ACT+Foundation:wght@400..700&family=Gruppo&family=Sniglet:wght@400;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -41,21 +44,24 @@
 
     <div class="main">
         <div class="bg">
+            <div class="slogan">Naturlig skönhet, handgjorda smycken
+            </div>
+            <div class="shader">
         
-        </div>    
-
+            </div>    
+        </div>
 
         <div class="Bilder">
             <div class="Halsband">
-                <img src = "https://media.viskan.com/v2/idunaprod/normal/20093754_front.jpg" Alt="" style="width:500px;height:550px;">
+                <img src = "https://media.viskan.com/v2/idunaprod/normal/20093754_front.jpg" Alt="" >
             </div>
 
             <div class="Örhängen">
-                <img src = "https://www.dhresource.com/webp/m/0x0/f2/albu/g10/M00/2D/29/rBVaWV1LtiKAG7A2AACg3yKFwqo428.jpg" Alt="" style="width:500px;height:550px;">
+                <img src = "https://www.dhresource.com/webp/m/0x0/f2/albu/g10/M00/2D/29/rBVaWV1LtiKAG7A2AACg3yKFwqo428.jpg" Alt="">
             </div>
 
             <div class="Armband">
-                <img src = "https://www.smycka.se/pub_images/original/A1991-001-21.jpg" Alt="" style="width:500px;height:550px;">
+                <img src = "https://www.smycka.se/pub_images/original/A1991-001-21.jpg" Alt="">
             </div>
         </div>
 
