--- a/halsband.html
+++ b/halsband.html
@@ -19,7 +19,7 @@
         <div class="head">
 
             <div class="name">
-                <a href="./landingpage.html">HANDGJORDA SMYCKEN</a>
+                <a href="./landingpage.html">SERENITY GEMS</a>
             </div>
 
             <div class="headermenu">
@@ -29,11 +29,18 @@
 
                 <div class="armband">
                     <a href="./armband.html">ARMBAND</a>
-
                 </div>
 
                 <div class="örhängen">
                     <a href="./örhängen.html">ÖRHÄNGEN</a>
+                </div>
+
+                <div class="icon-cart">
+                    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"/>
+                    </svg>
+                    <span>0</span>
+                </div>
     
             </div>
         </div>
@@ -50,7 +57,7 @@
                         <img src="https://alwaysbuddies.com/cdn/shop/products/happy-cat-meme-necklace-579561.jpg?v=1685602848&width=1946" alt="cat necklace">
                         <div class="txt1">Happy Cat</div>
                     </div>
-                    <button class="button" onclick="alert('Wow, this is nice')">Köp  skriv priser på knapparna</button>
+                    <button class="button" onclick="addToCart('Happy Cat')">Köp  skriv priser på knapparna</button>
                 </div>
 
                 <div class="product2">
@@ -58,7 +65,7 @@
                         <img src="https://alwaysbuddies.com/cdn/shop/products/the-rock-meme-necklace-421975.jpg?v=1685602852&width=1946">
                         <div class="txt2">The Rock</div>
                     </div>
-                    <button class="button" onclick="alert('Wow, this is niceeeeeee')">Köp</button>
+                    <button class="button" onclick="addToCart('The Rock')">Köp</button>
                 </div>
 
                 <div class="product3">
@@ -66,7 +73,7 @@
                         <img src="https://i.etsystatic.com/5134073/r/il/c333c5/2792106556/il_fullxfull.2792106556_to02.jpg">
                         <div class="txt3">Screaming Guy</div>
                     </div>
-                    <button class="button" onclick="alert('Wow, this is nice')">Köp</button>
+                    <button class="button" onclick="addToCart('Screaming Guy')">Köp</button>
                 </div>
 
             </div>    
@@ -77,7 +84,7 @@
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSYvLrZVTLq-MflHkxveuhBHHtl-eshBnZ4A&usqp=CAU">
                         <div class="txt4">Sourcream and Onion</div>
                     </div>
-                    <button class="button" onclick="alert('Wow, this is nice')">Köp</button>
+                    <button class="button" onclick="addToCart('Sourcream and Onion')">Köp</button>
                 </div>
 
                 <div class="product5">
@@ -85,7 +92,7 @@
                         <img src="https://canary.contestimg.wish.com/api/webimage/57e8e3f83022a614927d84be-large.jpg?cache_buster=f83686ad8086323c60e2828b67e1e4fb">
                         <div class="txt5">Spooder-Man</div>
                     </div>
-                    <button class="button" onclick="alert('Wow, this is nice')">Köp</button>
+                    <button class="button" onclick="addToCart('Spooder-Man')">Köp</button>
                 </div>
 
                 <div class="product6">
@@ -93,10 +100,16 @@
                         <img src="https://i.pinimg.com/736x/21/ab/45/21ab459460272f614207f46091a0ed98.jpg">
                         <div class="txt6">Big Ass Chain</div>
                     </div>
-                    <button class="button" onclick="alert('Wow, this is nice')">Köp</button>
+                    <button class="button" onclick="addToCart('Big Ass Chain')">Köp</button>
                 </div>
             </div>
         </div>
     </div>
+
+
+
+
+
+
 </body>
 </html>
