--- a/landingpage.html
+++ b/landingpage.html
@@ -18,7 +18,7 @@
         <div class="head">
 
             <div class="name">
-                <a href="./landingpage.html">HANDGJORDA SMYCKEN</a>
+                <a href="./landingpage.html">SERENITY GEMS</a>
             </div>
 
             <div class="headermenu">
