--- a/örhängen.html
+++ b/örhängen.html
@@ -19,7 +19,7 @@
         <div class="head">
 
             <div class="name">
-                <a href="./landingpage.html">HANDGJORDA SMYCKEN</a>
+                <a href="./landingpage.html">SERENITY GEMS</a>
             </div>
 
             <div class="headermenu">
