changed links to php files

--- a/landingpage.html
+++ b/landingpage.html
@@ -23,16 +23,16 @@
 
             <div class="headermenu">
                 <div class="halsband">
-                    <a href="./halsband.html">HALSBAND</a>
+                    <a href="./halsband.php">HALSBAND</a>
                 </div>
 
                 <div class="armband">
-                    <a href="./armband.html">ARMBAND</a>
+                    <a href="./armband.php">ARMBAND</a>
 
                 </div>
 
                 <div class="örhängen">
-                    <a href="./örhängen.html">ÖRHÄNGEN</a>
+                    <a href="./örhängen.php">ÖRHÄNGEN</a>
     
             </div>
         </div>
