fixar klart allt sen

--- a/landingpage.html
+++ b/landingpage.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Edu+NSW+ACT+Foundation:wght@400..700&family=Gruppo&family=Sniglet:wght@400;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,7 +21,7 @@
         <div class="head">
 
             <div class="name">
-                <a href="./landingpage.html">SERENITY GEMS</a>
+                <a href="./landingpage.html">HANDGJORDA SMYCKEN</a>
             </div>
 
             <div class="headermenu">
@@ -38,25 +41,36 @@
         </div>
     </header>
 
-
     <div class="main">
         <div class="bg">
+            <div class="slogan">Naturlig skönhet, handgjorda smycken
+            </div>
+            <div class="shader">
         
-        </div>    
-
+            </div>    
+        </div>
 
         <div class="Bilder">
             <div class="Halsband">
-                <img src = "https://media.viskan.com/v2/idunaprod/normal/20093754_front.jpg" Alt="" style="width:500px;height:550px;">
-            </div>
+                <a href="./halsband.php">
+                    <img src="https://media.discordapp.net/attachments/959067842286866432/1220645785931219025/halsband4.png?ex=660fb1f9&is=65fd3cf9&hm=f3e37115b4ae42422e65af90ff5ec43cabdf9f40347ebf623a5b890b41b701a6&=&format=webp&quality=lossless&width=669&height=669" alt="">
+                    <span class="image-text">Halsband</span> 
+                </a>
+            </div>        
 
             <div class="Örhängen">
-                <img src = "https://www.dhresource.com/webp/m/0x0/f2/albu/g10/M00/2D/29/rBVaWV1LtiKAG7A2AACg3yKFwqo428.jpg" Alt="" style="width:500px;height:550px;">
-            </div>
+                <a href="./örhängen.php">
+                    <img src="https://media.discordapp.net/attachments/959067842286866432/1220645785302208532/orhange2.png?ex=660fb1f9&is=65fd3cf9&hm=83a2db07d6b45d88e857ff076969a91b0fc8a9bfd1ab889498b406a326367432&=&format=webp&quality=lossless&width=669&height=669" alt="">
+                    <span class="image-text">Örhängen</span> 
+                </a>
+            </div>        
 
             <div class="Armband">
-                <img src = "https://www.smycka.se/pub_images/original/A1991-001-21.jpg" Alt="" style="width:500px;height:550px;">
-            </div>
+                <a href="./armband.php">
+                    <img src="https://media.discordapp.net/attachments/959067842286866432/1220645786396921947/armband6.png?ex=660fb1f9&is=65fd3cf9&hm=d2aaa1473f3be4c26c90c28f32f48d778fd39e31e1db073ceefc759d16c7856c&=&format=webp&quality=lossless&width=669&height=669" alt="">
+                    <span class="image-text">Armband</span> 
+                </a>
+            </div>        
         </div>
 
     </div>
