--- a/landingpage.html
+++ b/landingpage.html
@@ -41,6 +41,7 @@
         </div>
     </header>
 
+    </div>
     <div class="main">
         <div class="bg">
             <div class="slogan">Naturlig skönhet, handgjorda smycken
