--- a/landingpage.html
+++ b/landingpage.html
@@ -53,21 +53,21 @@
         <div class="Bilder">
             <div class="Halsband">
                 <a href="./halsband.php">
-                    <img src="https://media.discordapp.net/attachments/959067842286866432/1220645785931219025/halsband4.png?ex=660fb1f9&is=65fd3cf9&hm=f3e37115b4ae42422e65af90ff5ec43cabdf9f40347ebf623a5b890b41b701a6&=&format=webp&quality=lossless&width=669&height=669" alt="">
+                    <img src="halsband4.png" alt="">
                     <span class="image-text">Halsband</span> 
                 </a>
             </div>        
 
             <div class="Örhängen">
                 <a href="./örhängen.php">
-                    <img src="https://media.discordapp.net/attachments/959067842286866432/1220645785302208532/orhange2.png?ex=660fb1f9&is=65fd3cf9&hm=83a2db07d6b45d88e857ff076969a91b0fc8a9bfd1ab889498b406a326367432&=&format=webp&quality=lossless&width=669&height=669" alt="">
+                    <img src="örhänge2.png" alt="">
                     <span class="image-text">Örhängen</span> 
                 </a>
             </div>        
 
             <div class="Armband">
                 <a href="./armband.php">
-                    <img src="https://media.discordapp.net/attachments/959067842286866432/1220645786396921947/armband6.png?ex=660fb1f9&is=65fd3cf9&hm=d2aaa1473f3be4c26c90c28f32f48d778fd39e31e1db073ceefc759d16c7856c&=&format=webp&quality=lossless&width=669&height=669" alt="">
+                    <img src="armband6.png" alt="">
                     <span class="image-text">Armband</span> 
                 </a>
             </div>        
